--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -53,6 +53,7 @@ dev_dependencies:
   connectivity_plus: ^6.1.0
   shared_preferences: ^2.0.15
   image_picker: ^1.1.2
+  syncfusion_flutter_charts: ^27.2.5
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
